--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Trail Horses and Mules for Hunting</title>
+  <title>Licensed New Mexico Outfitter</title>
   <meta name="description" content="trail horses and mules, trained for hunting in rugged mountain environments">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="main.css">
